Multiple parameters support in ENV, LABEL VOLUME support ignore_errors parameter

--- a/samples/base1/Dockerfile
+++ b/samples/base1/Dockerfile
@@ -2,6 +2,8 @@ FROM localhost:5000/centos:6
 EXPOSE 1000
 ENV TEST=base1
 ENV IMAGE_DESCRIPTION="Old base image"
+VOLUME /mnt/basevol
 ENTRYPOINT ["bash","-c"]
-CMD ["echo IMAGE_DESCRIPTION=$IMAGE_DESCRIPTION && echo TEST=$TEST && cat test.txt /etc/centos-release"]
+LABEL VERSION=1
+CMD ["env && echo 'CMD from base:1' && cat test.txt /etc/centos-release"]
 
